--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@
 *.project
 *.classpath
 *.settings
+
+# CMake stuff that should be generated, not in the repo!
+CMakeFiles
+CMakeFiles/*
+CMakeCache.txt
+Makefile
+cmake_install.cmake
