moved c++ files to their own folder. they really should not be at root

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@
 *.settings
 
 # CMake stuff that should be generated, not in the repo!
-CMakeFiles
-CMakeFiles/*
-CMakeCache.txt
-Makefile
-cmake_install.cmake
+*/CMakeFiles
+*/CMakeFiles/*
+*/CMakeCache.txt
+*/Makefile
+*/cmake_install.cmake
+
+# executables should not be checked in
+cpp/solver
