i hate c++... this doesn't compile yet but figured i'd toss it up to the repo so everyone else can see it too

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -1,4 +1,4 @@
 #run cmake . then make
 cmake_minimum_required(VERSION 2.6)
 include_directories(.)
-add_executable(solver solver.cpp solver.h vector.h matrix.h)
+add_executable(solver solver.cpp solver.h vector.h matrix.h printable_element_container.h array_vector.cpp)
