check out newcpp

--- a/newcpp/CMakeLists.txt
+++ b/newcpp/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.6)
 include_directories(.)
 
 # Even though -fopenmp won’t appear in the GUI options, it does take effect
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -O3")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp -O3")
 
 add_executable(newsolver newsolver.cpp)
