--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 2.6)
 include_directories(.)
 
 # Even though -fopenmp won’t appear in the GUI options, it does take effect
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp")
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -O3")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fopenmp -O3")
 
 add_executable(solver solver.cpp solver.h vector.h matrix.h matrix_market_handler.h array_vector.cpp sparse_hashed_matrix.cpp conjugate_gradient_solver.cpp)
 
