ocl version partially working

--- a/opencl/Makefile
+++ b/opencl/Makefile
@@ -1,10 +1,7 @@
 LIBS=-lOpenCL
 CFLAGS=-O3
 all:
-	g++ $(CFLAGS) -o oclsolver -I /usr/local/cuda-4.2/NVIDIA_GPU_Computing_SDK/OpenCL/common/inc oclsolver.cpp $(LIBS)
-
-hello:
-	g++ $(CFLAGS) -o helloworld -I /usr/local/cuda-4.2/NVIDIA_GPU_Computing_SDK/OpenCL/common/inc helloworld.cpp $(LIBS)
+	g++ $(CFLAGS) -o ocl_solver -I /usr/local/cuda-4.2/NVIDIA_GPU_Computing_SDK/OpenCL/common/inc ocl_solver.cpp $(LIBS)
 
 clean:
-	rm -rf oclsolver helloworld *.o
+	rm -rf ocl_solver *.o
